# matching

./: .gitignore  LICENSE  MATCHING_2_additional_clinical_info_ygtss_and_tic_durations.xlsx - Shortcut.lnk  Mamouri_2021_in_python.txt  Mamouris_2021_matching_in_R.docx  better_software.txt  boys.csv  girls.csv  leap_days_WARNING_PHI.xlsx  mamouris.r  match_my_data.py  matched_KJB.xlsx  matching_TS_to_PTD.xlsx  matching_TS_to_TFC.xlsx  numbers.txt  one_scan_per_subject.csv  positron_requirements.txt  pyproject.toml  ready_to_match.csv  ready_to_match_TEST.csv  results_2025-09-05_1150.txt  uv-environment.txt  whence_requirements.txt  ~$matching_TS_to_PTD.xlsx
PTD_cases_matching_controls/: girls.csv
homegown/: early_planning.txt  from_me_and_WashU_ChatGPT.txt  matching.py
pymatch/pymatch/: unwanted.py
pymatch/pymatch/.spyproject/config/: workspace.ini
pymatch/pymatch/.spyproject/config/backups/: workspace.ini.bak
