[project]
name = "matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.8.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distlib==0.4.0",
    "filelock==3.19.1",
    "fonttools==4.60.0",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "openpyxl>=3.1.5",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pipenv==2025.0.4",
    "pyparsing==3.2.4",
    "pytz==2025.2",
    "setuptools==80.9.0",
    "tzdata==2025.2",
    "virtualenv==20.34.0",
]
